--- a/index.html
+++ b/index.html
@@ -125,14 +125,16 @@
 								</div>
 							</section>
 
-						<!-- Three -->
-			<script src="assets/js/jquery.min.js"></script>
+						<!-- Three --><script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+						
+
+	
 						
 
 	</body>
